[package]
name = "lemmingsfi-sdk"
version = "0.1.0"
description = "LemmingsFi SDK: Jupiter AMM integration, quoting engine, and state deserialization"
edition = "2021"

[dependencies]
jupiter-amm-interface = { git = "https://github.com/jup-ag/jupiter-amm-interface", branch = "main" }
borsh = "1.5"
solana-pubkey = { version = "4", features = ["borsh", "curve25519"] }
solana-account = { version = "3.4", features = ["serde"] }
solana-instruction = "3"
solana-clock = "3"
solana-program-error = "3"
rust_decimal = "1.36"
thiserror = "2.0"
